--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,15 +9,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Vanilla Audio Player</title>
+    <title>Vinylla Player</title>
   </head>
   <body>
-    <h1>Vanilla Audio Player</h1>
+    <h1>Vinylla Player</h1>
 
     <div class="cover-lage">
-        <img src="assets/img/Mariya Takeuchi - Plastic Love.jpg" alt="" id="cover-large" />
+      <img
+        src="assets/img/Mariya Takeuchi - Plastic Love.jpg"
+        alt=""
+        id="cover-large"
+      />
     </div>
-    
+
     <div class="music-container" id="music-container">
       <div class="music-info">
         <h4 id="title"></h4>
@@ -27,10 +31,17 @@
         </div>
       </div>
 
-      <audio src="assets/audio/Mariya Takeuchi - Plastic Love.flac" id="audio"></audio>
+      <audio
+        src="assets/audio/Mariya Takeuchi - Plastic Love.flac"
+        id="audio"
+      ></audio>
 
       <div class="img-container">
-        <img src="assets/img/Mariya Takeuchi - Plastic Love.jpg" alt="music-cover" id="cover" />
+        <img
+          src="assets/img/Mariya Takeuchi - Plastic Love.jpg"
+          alt="music-cover"
+          id="cover"
+        />
       </div>
 
       <div class="navigation">
@@ -49,3 +60,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
